// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SCollapse.vue accepts props for text 1`] = `
<article class="collapse">
  <header>
    <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="" class="collapse__trigger">
      Collapse trigger text
      <sicon-stub icon="chevron-down" color="" shade="" size="" aria-hidden="true" class="collapse__icon"></sicon-stub>
    </sbutton-stub>
  </header>
  <transition-stub name="fade">
    <main aria-hidden="true" class="collapse__content" style="display: none;">
      Collapse content
    </main>
  </transition-stub>
</article>
`;

exports[`SCollapse.vue accepts slots for text 1`] = `
<article class="collapse">
  <header>
    <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="" class="collapse__trigger">
      Collapse trigger text
      <sicon-stub icon="chevron-down" color="" shade="" size="" aria-hidden="true" class="collapse__icon"></sicon-stub>
    </sbutton-stub>
  </header>
  <transition-stub name="fade">
    <main aria-hidden="true" class="collapse__content" style="display: none;">content</main>
  </transition-stub>
</article>
`;

exports[`SCollapse.vue opens and closes 1`] = `
<article class="collapse">
  <header><button class="button collapse__trigger">
      <!---->
      <!---->
      Collapse trigger text
      <svg viewBox="0 0 24 24" class="icon collapse__icon" aria-hidden="true">
        <polyline points="6 9 12 15 18 9"></polyline>
      </svg>
      <!----></button></header>
  <main aria-hidden="true" class="collapse__content" style="display: none;">
    Collapse content
  </main>
</article>
`;

exports[`SCollapse.vue opens and closes 2`] = `
<article class="collapse">
  <header><button class="button collapse__trigger">
      <!---->
      <!---->
      Collapse trigger text
      <svg viewBox="0 0 24 24" class="icon collapse__icon" aria-hidden="true">
        <polyline points="6 9 12 15 18 9"></polyline>
      </svg>
      <!----></button></header>
  <main aria-hidden="true" class="collapse__content" style="display: none;">
    Collapse content
  </main>
</article>
`;

exports[`SCollapse.vue renders correctly 1`] = `
<article class="collapse">
  <header>
    <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="" class="collapse__trigger">
      Collapse trigger text
      <sicon-stub icon="chevron-down" color="" shade="" size="" aria-hidden="true" class="collapse__icon"></sicon-stub>
    </sbutton-stub>
  </header>
  <transition-stub name="fade">
    <main aria-hidden="true" class="collapse__content" style="display: none;">
      Collapse content
    </main>
  </transition-stub>
</article>
`;
